@@ -43,4 +43,5 @@
 2024-08-23 work on writing linked vtk in parallel
 2024-08-24 finished writing linked vtk in parallel
 2024-08-24 thread creation slow in windows -> search for thread pool solution on community request
+2024-08-25 thread pool implemented for linking frd result blocks in vtkwriter, still very slow on windows. the useroptions converter threads will be set to 1 for windows
  
